# sigma-17-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  health-check.sh  pyproject.toml
accounts/: admin.py  auth.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
accounts/management/commands/: seed_rbac.py
accounts/migrations/: 0001_initial.py  0002_create_profiles_for_existing_users.py
config/: settings.py  urls.py
core/: serializers.py  urls.py  views.py
core/management/commands/: wait_for_db.py
